4to Commit. Form y Boton.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,1 @@
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1 style="text-align: center;">Inicio del Desarrollo</h1>
-<br>
-<h3 style="text-align: center;">Ok, empecé el proceso de desarrllo de mi aplicación, elaboración de actividades y el camino hacia mi certificación.</h3>
-<br>
-<br>
-<h3 style="text-align: center;">--- -- - Proyecto: MyMoneyApp | for ADSI - -- ---</h3>
-<br>
-
-
+<router-outlet></router-outlet>
