--- a/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
+++ b/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
@@ -6,11 +6,16 @@
         <br>
         <div class="card">
             <div class="card-body">
-                <input type="text" class="form-control form-control-lg" placeholder="Ingrese su presupuesto..">
-                <button class="btn btn-secondary btn-lg btn-block mt-2">ACEPTAR</button>
+
+                <div *ngIf="cantidadIncorrecta" class="text-center mb-3">
+                    <span class="badge bg-danger textError">El presupuesto debe ser mayor a cero ($0.00)</span>
+                </div>
+
+                <input type="number"  [(ngModel)]="cantidad" class="form-control form-control-lg" placeholder="Ingrese su presupuesto..">
+                <button class="btn btn-secondary btn-lg btn-block mt-2" (click)="agregar()">ACEPTAR</button>
+
             </div>
         </div>
-        
     </div>
 </div>
 
