Lista-de-Gasto. Hacer que la lista sea visible. Uso de Flex para la ubicación.

--- a/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
+++ b/src/app/components/ingresar-presupuesto/ingresar-presupuesto.component.html
@@ -1,8 +1,14 @@
+<br>
+<br>
+<br>
+<h1 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+          text-align:center; font-size:65px; color: rgb(255, 245, 206);"
+    >MyMoneyApp</h1>
 
 <div class="row mt-5">
     <div class="col-lg-6 offset-lg-3">
         <br>        
-        <h2 class="text-center fontTitle">Ingrese su Presupuesto</h2>
+        <h3 class="text-center fontTitle">Ingrese su Presupuesto</h3>
         <br>
         <div class="card">
             <div class="card-body">
