--- a/src/app/components/gastos/lista-de-gasto/lista-de-gasto.component.html
+++ b/src/app/components/gastos/lista-de-gasto/lista-de-gasto.component.html
@@ -18,9 +18,9 @@
 <div class="row">
     <div class="col-lg-12">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item" *ngFor="let gasto of listGastos">
+            <li class="list-group-item d-flex justify-content-between" *ngFor="let gasto of listGastos">
                 <strong>{{ gasto.nombre }}</strong>
-                <strong>${{ gasto.cantidad }}</strong>
+                <span class="badge rounded-pill bg-secondary">${{ gasto.cantidad }}</span>
             </li>
         </ul>
     </div>
